# chromiumos-platform2

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  CPPLINT.cfg  OWNERS  PRESUBMIT.cfg  PRESUBMIT.py  README.md  navbar.md  pylintrc
bootlockbox/: BUILD.gn  DIR_METADATA  OWNERS  README.md  boot_lockbox_client.cc  boot_lockbox_client.h  boot_lockbox_dbus_adaptor.cc  boot_lockbox_dbus_adaptor.h  boot_lockbox_service.cc  boot_lockbox_service.h  boot_lockbox_service_test.cc  boot_lockbox_tool.cc  boot_lockboxd.cc  fake_hwsec_space.cc  fake_hwsec_space.h  fake_tpm_nvspace.cc  fake_tpm_nvspace.h  hwsec_space.h  hwsec_space_impl.cc  hwsec_space_impl.h  hwsec_space_impl_test.cc  mock_nvram_boot_lockbox.h  nvram_boot_lockbox.cc  nvram_boot_lockbox.h  nvram_boot_lockbox_test.cc  nvram_boot_lockbox_unittest.cc  org.chromium.BootLockbox.conf  tpm_nvspace.h  tpm_nvspace_impl.cc  tpm_nvspace_impl.h  tpm_nvspace_impl_test.cc
bootsplash/: BUILD.gn  OWNERS  README.md  bootsplash_daemon.cc  bootsplash_daemon.h  bootsplash_daemon_test.cc  frecon.cc  frecon.h  frecon_test.cc  main.cc  paths.cc  paths.h  paths_test.cc  session_event_observer.h  session_manager_client.cc  session_manager_client.h  session_manager_client_interface.h  session_manager_client_test.cc  test_util.cc  test_util.h  utils.cc  utils.h  utils_test.cc
bootstat/: BUILD.gn  OWNERS  README.md  bootstat.cc  bootstat.h  bootstat_archive  bootstat_get_last  bootstat_log.cc  bootstat_summary  bootstat_test.cc  bootstat_test.h
bpf-mons/: BUILD.gn  DIR_METADATA  README.md  fdmon.bpf.c  fdmon.cc  genmon.bpf.c  genmon.cc  libmon.cc  lockmon.bpf.c  lockmon.cc  memmon.bpf.c  memmon.cc  memmon_tracing.cc  psimon.bpf.c  psimon.cc
bpf-snoops/: BUILD.gn  DIR_METADATA  OWNERS  README.md  fdsnoop.bpf.c  fdsnoop.cc  libsnoop.cc  memsnoop.bpf.c  memsnoop.cc
build_overrides/: OWNERS  README.md  pigweed.gni  pigweed_environment.gni
chaps/: BUILD.gn  DIR_METADATA  OWNERS  README.md  async_tpm_utility.h  attributes.cc  attributes.h  attributes_fuzzer.cc  chaps.cc  chaps.h  chaps_adaptor.cc  chaps_adaptor.h  chaps_client.cc  chaps_factory.h  chaps_factory_impl.cc  chaps_factory_impl.h  chaps_factory_mock.h  chaps_interface.h  chaps_metrics.cc  chaps_metrics.h  chaps_metrics_test.cc  chaps_pam_module.cc  chaps_pam_module_test.cc  chaps_proxy.cc  chaps_proxy.h  chaps_service.cc  chaps_service.h  chaps_service_test.cc  chaps_test.cc  chaps_utility.cc  chaps_utility.h  chaps_utility_fuzzer.cc  chapsd.cc  chapsd_test.cc  isolate.h  isolate_linux.cc  isolate_login_client.cc  isolate_login_client.h  isolate_login_client_mock.h  isolate_login_client_test.cc  (+75 more)
client_id/: BUILD.gn  README.md  client_id.cc  client_id.h  client_id_test.cc  main.cc
common-mk/: BUILD.gn  BUILDCONFIG.gn  arg_prefix_filter_wrapper.py  args_generator_wrapper.py  bpf_gen.gni  check-cc-headers.py  check-dir-metadata.py  check-mojom.py  check-owners.py  check-readme.py  check-source-files-included.py  check-synced-protos.py  chromite_init.py  common.mk  common_utils.py  conftest.py  cxxbridge.gni  dbus_glib.gni  ebpf_gen.gni  ebuild_function.py  ebuild_function_unittest.py  file_generator_wrapper.py  flatbuffer.gni  generate-dbus-adaptors.gni  generate-dbus-proxies.gni  generate-ebpf.py  generate-pc.py  generate_pc_file.sh  generated_dbus_header_diff.py  gnlint.py  gnlint_unittest.py  install_config.gni  install_seccomp_policy.gni  meson_test.py  mojom_bindings_generator.gni  mojom_bindings_generator_wrapper.py  pkg-config_wrapper.py  pkg_config.gni  platform2.py  platform2_test.py  (+8 more)
cronista/: Cargo.toml
cros-toolchain/: BUILD.gn  DIR_METADATA  README.md
crosh/: Cargo.toml  README.md  crosh  inputrc.safe  make-safe-inputrc  network_diag  run_tests.sh
cryptohome/: BUILD.gn  DIR_METADATA  OWNERS  OWNERS.per_file  OWNERS.primary  README.md  attestation.proto  auth_block.h  auth_block_state.cc  auth_block_state.h  auth_block_state.proto  auth_block_state_unittest.cc  auth_block_unittest.cc  auth_factor.h  auth_factor_vault_keyset_converter.cc  auth_factor_vault_keyset_converter.h  auth_factor_vault_keyset_converter_test.cc  auth_factor_vault_keyset_converter_unittest.cc  auth_input_utils.cc  auth_input_utils.h  auth_input_utils_unittest.cc  auth_intent.h  auth_session.cc  auth_session.h  auth_session_flatbuffer.cc  auth_session_flatbuffer.h  auth_session_keyset_management_unittest.cc  auth_session_manager.cc  auth_session_manager.h  auth_session_manager_unittest.cc  auth_session_proto_utils.cc  auth_session_proto_utils.h  auth_session_proto_utils_unittest.cc  auth_session_protobuf.cc  auth_session_tpm_simulator_unittest.cc  auth_session_unittest.cc  boot_lockbox_key.proto  cert_provision.h  challenge_credential_auth_block.cc  challenge_credential_auth_block.h  (+283 more)
dbus_perfetto_producer/: BUILD.gn  DIR_METADATA  OWNERS  README.md  dbus_monitor.cc  dbus_monitor.h  dbus_request.cc  dbus_request.h  dbus_tracer.cc  dbus_tracer.h  dbus_tracing_categories.cc  dbus_tracing_categories.h  main.cc  perfetto_producer.cc  perfetto_producer.h  perfetto_producer_test.cc  util.cc  util.h  util_test.cc
desktop_ota_recovery/: BUILD.gn  DIR_METADATA  README.md  main.cpp
dev-install/: BUILD.gn  README.md  dev_install.cc  dev_install.h  dev_install_test.cc
device_management/: .clang-format  BUILD.gn  DIR_METADATA  OWNERS  README.md  crc.h  dbus_interface.h  device_management_adaptor.cc  device_management_adaptor.h  device_management_daemon.cc  device_management_daemon.h  device_management_service.cc  device_management_service.h  device_management_service_test.cc  main.cc  metrics.cc  metrics.h  org.chromium.DeviceManagement.conf
diagnostics/: BUILD.gn  DIR_METADATA  IPC_OWNERS  OWNERS  README.md
dlp/: BUILD.gn  OWNERS  dlp.cc  dlp_adaptor.cc  dlp_adaptor.h  dlp_adaptor_fuzzer.cc  dlp_adaptor_test.cc  dlp_adaptor_test_helper.cc  dlp_adaptor_test_helper.h  dlp_daemon.cc  dlp_daemon.h  dlp_database.cc  dlp_database.h  dlp_init.cc  dlp_metrics.cc  dlp_metrics.h  dlp_requests_cache.cc  dlp_requests_cache.h  dlp_requests_cache_test.cc  fanotify_reader_thread.cc  file_id.cc  (+6 more)
(+16382 files in other folders)
