# Copyright 2022 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//common-mk/pkg_config.gni")

group("all") {
  deps = [ ":bootsplash" ]
  if (use.test) {
    deps += [ ":bootsplash_testrunner" ]
  }
}

pkg_config("target_defaults") {
  pkg_deps = [
    "libbrillo",
    "libchrome",
    "libec",
    "re2",
  ]
}

static_library("libbootsplash") {
  sources = [
    "frecon.cc",
    "paths.cc",
    "utils.cc",
  ]
  configs += [ ":target_defaults" ]
}

executable("bootsplash") {
  sources = [ "main.cc" ]
  configs += [ ":target_defaults" ]
  deps = [ ":libbootsplash" ]
}

if (use.test) {
  pkg_config("libchrome_test_config") {
    pkg_deps = [
      "libbrillo-test",
      "libchrome-test",
    ]
  }
  executable("bootsplash_testrunner") {
    sources = [
      "frecon_test.cc",
      "paths_test.cc",
      "utils_test.cc",
    ]
    run_test = true
    configs += [
      "//common-mk:test",
      ":libchrome_test_config",
      ":target_defaults",
    ]
    deps = [
      ":libbootsplash",
      "//common-mk/testrunner",
    ]
  }
}
